# simple-pwm-pico

./: CMakeLists.txt  README.md  main.cpp
include/: config.h  motor_control.h  pins.h
src/: motor_control.cpp
